[package]
name = "rust_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
anyhow = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm14-0",
] } # use correct feature according to your llvm version
rustyline = "12.0"
